data/kagome/periodic/own_graph/opg/energy/2x2/slurm-7175982_3.out
No CuPy installation found, continuing without GPU acceleration.
having the CPUs {16, 17, 20, 21} available.
Started basinhopping at 2020-12-24 22:27:43.761041 UTC, with
command line arguments = {'path': '/home/jorisk2/HVQE/data/kagome/periodic/own_graph/opg/energy/2x2', 'n_par': 24, 'par_multiplicity': 1, 'n_iter': 0, 'cost_fn': 'energy', 'temperature': 1.0, 'stepsize': 1.0, 'init_par': None, 'dump_interval': None}
runtime variables =  {'GPU': False, 'date_start': '2020-12-24 22:27:43.761041', 'complete_graph': [(0, 4), (2, 6), (8, 7), (10, 5), (11, 1), (9, 3), (1, 4), (3, 6), (5, 8), (7, 10), (9, 0), (11, 2), (1, 2), (3, 0), (6, 8), (4, 10), (5, 9), (7, 11), (0, 1), (2, 3), (4, 5), (6, 7), (8, 9), (10, 11)], 'init_layer': [(0, 1), (2, 3), (4, 5), (6, 7), (8, 9), (10, 11)], 'layers': [[(0, 4), (2, 6), (8, 7), (10, 5), (11, 1), (9, 3)], [(1, 4), (3, 6), (5, 8), (7, 10), (9, 0), (11, 2)], [(1, 2), (3, 0), (6, 8), (4, 10), (5, 9), (7, 11)], [(0, 1), (2, 3), (4, 5), (6, 7), (8, 9), (10, 11)]], 'n': 12}
.......................................................................................................................Traceback (most recent call last):
  File "/home/jorisk2/HVQE/HVQE.py", line 113, in <module>
    _HVQE.plot_VQE_data(cmd_args.path,'energy',cmd_args.par_multiplicity,gates_per_cycle)
  File "/home/jorisk2/HVQE/_HVQE.py", line 173, in plot_VQE_data
    data=[eval(x.strip()) for x in data]
  File "/home/jorisk2/HVQE/_HVQE.py", line 173, in <listcomp>
    data=[eval(x.strip()) for x in data]
  File "<string>", line 1
    rt': '2020-12-24 22:27:41.626940', 'complete_graph': [(0, 4), (2, 6), (8, 7), (10, 5), (11, 1), (9, 3), (1, 4), (3, 6), (5, 8), (7, 10), (9, 0), (11, 2), (1, 2), (3, 0), (6, 8), (4, 10), (5, 9), (7, 11), (0, 1), (2, 3), (4, 5), (6, 7), (8, 9), (10, 11)], 'init_layer': [(0, 1), (2, 3), (4, 5), (6, 7), (8, 9), (10, 11)], 'layers': [[(0, 4), (2, 6), (8, 7), (10, 5), (11, 1), (9, 3)], [(1, 4), (3, 6), (5, 8), (7, 10), (9, 0), (11, 2)], [(1, 2), (3, 0), (6, 8), (4, 10), (5, 9), (7, 11)], [(0, 1), (2, 3), (4, 5), (6, 7), (8, 9), (10, 11)]], 'n': 12, 'start': 1608848890.8888307, 'end': 1608849261.6617675, 'wall_clock': 0.1029924824502733, 'E_VQE': -5.17611405629965, 'inf_VQE': 0.7777347773396925, 'date_end': '2020-12-24 22:34:21.774333'}, {'n_fn_calls': 109, 'local_min_list': [], 'local_min_parameters_list': [], 'local_min_accept_list': [], 'init_par': [0.0004307855092838648, -0.00038492001855127566, -0.00011415138918304235, 0.00011229622779969383, -8.660744019199927e-05, -0.00031920321053070127, -0.00030329196915434957, -0.0004391656175012765, 0.0003819674331944845, -0.0003619374400043411, 4.435150638415909e-05, -0.00042652062570822894, 6.579616666118802e-05, -0.00014757610806832492, 0.00012428135976855215, -1.9699506414992164e-06, 0.00010372711726861687, -0.00029827444979668895, 0.0004233223946218137, -0.000492369406975852, 0.00022392694401870636, 0.00030711393848121074, -0.00042054550554525283, -7.419693748688424e-06], 'cost_VQE': -5.17611405629965, 'opt_parameters': [-0.025419000583567046, -0.36827639414745666, -0.116934826731576, -0.05059971256393779, -0.34590909942582665, -0.33904021126088274, 0.19569456771721047, -0.1392290404237737, 0.40690550151827076, -0.5063407907177623, -0.3205673537444484, -0.30124877869397765, 0.8984116074365721, -1.9290050249772879, -0.03049505781414199, -0.022863637778649235, 0.3552431799853697, -0.5042220915768575, -0.8184832190675222, -0.9355705997406013, 1.6377117387677944, -1.732297836339382, -0.6603428144649135, -0.56315406952729]}]
      ^
SyntaxError: invalid syntax
